--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,7 +11,14 @@
 
     h2 {
       margin-top: 20px;
+      transition: font-size 0.2s ease-in-out;
     }
+  }
+
+  .fun-bus {
+    transition: width 0.2s ease-in-out;
+    margin: 0px auto;
+    display: block;
   }
 
   .content-section {
